# anubis-engine

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  CUsersUserAppDataLocalTempmcp_old.rs  GRAPH_VISUALIZER_SPEC.md  QUICK_REF.md  README.md  SPEC.md  index.html  package-lock.json  package.json  program.md  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: tauri-build.yml
.wwebjs_cache/: 2.3000.1039982100.html
benchmarks/: README.md
benchmarks/baselines/: current-alpha-2026-05-23-0003-image-sidecar-indexing.json  current-alpha-2026-05-23-0004-newest-engine-binary.json  current-alpha-2026-05-23-0006-gated-graph-boost.json  current-alpha-2026-05-23-0009-graph-fanout-prune.json  current-alpha-2026-05-23-0012-doc-cap-after-fanout.json  current-alpha-2026-05-23-0014-graph-boost-min-signal.json  current-alpha-2026-05-23-0017-disable-centrality-tiebreak.json  current-alpha-2026-05-23-0023-scale-graph-boost.json  current-alpha-2026-05-23-0027-graph-fanout-two.json  current-alpha-2026-05-23-0036-trusted-graph-metrics.json  current-alpha-2026-05-23-0039-manifest-overlap-expansion.json  current-alpha-2026-05-23-0040-graph-boost-evidence-gate.json  current-alpha-2026-05-23-0041-overlap-256-after-graph-gate.json  current-alpha-2026-05-23-0042-smaller-candidate-pool.json  current-alpha-2026-05-23-0043-reference-mentioned-doc-rerank.json  current-alpha-2026-05-23-0044-reference-routed-candidates.json  current-alpha-2026-05-23-0045-candidate-pool-10.json  current-alpha-2026-05-23-0047-reference-route-one-per-doc.json  current-alpha-2026-05-23-0048-overlap-128-after-route-cap.json  current-alpha-2026-05-23-0051-window-384-overlap-128.json  current-alpha-2026-05-23-0052-window-384-overlap-64.json  current-alpha-2026-05-23-0053-skip-centrality-tiebreak.json  current-alpha-2026-05-23-0054-skip-graph-expansion.json  current-alpha-2026-05-23.json
benchmarks/goals/: production.json
benchmarks/suites/: client-influencer.json  graph.json  indexing.json  quick.json  retrieval.json  security.json
experiments/: README.md
experiments/0001-score-breakdown/: config.json  decision.md  experiment.md  report.txt  result.json
experiments/0002-critical-failure-diagnosis/: config.json  decision.md  experiment.md  report.txt  result.json
experiments/0003-image-sidecar-indexing/: config.json  decision.md  experiment.md  report.txt  result.json
experiments/0004-newest-engine-binary/: config.json  decision.md  experiment.md  report.txt  result.json
experiments/0005-doc-cap-precision/: config.json  decision.md  experiment.md  report.txt  result.json
experiments/0006-gated-graph-boost/: config.json  decision.md  experiment.md  report.txt  result.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/chunker/: mod.rs  signal.rs  sliding.rs
src-tauri/src/commands/: index_commands.rs  mod.rs  query_commands.rs  status_commands.rs  workdir_commands.rs
src-tauri/src/embedder/: download.rs  local.rs  mod.rs
src-tauri/src/engine/: download.rs  events.rs  indexer.rs  mod.rs  preprocess.rs  registry.rs  settings.rs  sidecar.rs  state.rs  watcher.rs  workdir.rs
src-tauri/src/entities/: mod.rs
src-tauri/src/graph/: builder.rs  community.rs  mod.rs  scorer.rs
src-tauri/src/mcp/: mod.rs  protocol.rs  tools.rs
src-tauri/src/ocr/: engine.rs
src-tauri/src/parser/: audio.rs  csv.rs  docx.rs  image.rs  json.rs  markdown.rs  mod.rs  pdf.rs  video.rs  xlsx.rs
src-tauri/src/query/: context_pack.rs  hybrid.rs  mod.rs
src-tauri/src/store/: chunks.rs  db.rs  entities.rs  fts.rs  graph_store.rs  mod.rs  vectors.rs
src-tauri/src/transcription/: engine.rs
src-tauri/tests/fixtures/: sample.md
test/: benchmark.test.js
(+259 files in other folders)
