[package]
name = "anubis-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"

[lib]
name = "anubis_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "anubis-engine"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.11", features = ["protocol-asset"] }
tauri-plugin-fs = "2.5"
tokio = { version = "1.48", features = ["full"] }
pulldown-cmark = "0.13"
lopdf = "0.40"
docx-rs = "0.4"
calamine = { version = "0.35", features = ["dates"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff"] }
ocrs = "0.12"
fastembed = "5.13"
tantivy = "0.26"
petgraph = { version = "0.8", features = ["serde-1"] }
rusqlite = { version = "0.39", features = ["bundled"] }
rayon = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
notify = "8.0"
anyhow = "1.0"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
